--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next",
     "build": "cross-env NODE_ENV=production next build",
     "start": "cross-env NODE_ENV=production next start",
+    "prod": "cross-env NODE_ENV=production next build && next start",
     "analyze": "BUNDLE_ANALYZE=both next build",
     "analyze:server": "BUNDLE_ANALYZE=server next build",
     "analyze:browser": "BUNDLE_ANALYZE=browser next build"
@@ -18,11 +19,12 @@
     "@apollo/react-hooks": "^3.1.1",
     "@apollo/react-ssr": "^3.1.1",
     "apollo-boost": "^0.4.4",
-    "cross-env": "^5.2.1",
     "delay": "^4.3.0",
     "graphql": "^14.5.6",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.0.5",
+    "next-seo": "^2.1.0",
+    "next-size": "^2.0.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-if": "^3.4.3",
@@ -31,12 +33,16 @@
   },
   "devDependencies": {
     "@zeit/next-bundle-analyzer": "^0.1.2",
-    "next-sass": "^1.0.3",
     "@zeit/next-css": "^1.0.1",
+    "next-fonts": "^0.18.0",
+    "next-images": "^1.2.0",
+    "next-purgecss": "^3.1.1",
     "@zeit/next-sass": "^1.0.1",
     "babel-plugin-styled-components": "^1.10.6",
     "bootstrap": "^4.3.1",
+    "cross-env": "^5.2.1",
     "next-compose-plugins": "^2.2.0",
+    "next-sass": "^1.0.3",
     "node-sass": "^4.12.0",
     "nprogress": "^0.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
