--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.0.5",
     "next-seo": "^2.1.0",
+    "next-size": "^2.0.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-if": "^3.4.3",
