--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
     "next-sass": "^1.0.3",
     "node-sass": "^4.12.0",
     "nprogress": "^0.2.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.3"
   }
 }
